# bazelTest

./: .gitmodules
cmake_lib/: BUILD.bazel  CMakeLists.txt  WORKSPACE  main.cpp
cmake_lib/ios-app/: UrlGet-Info.plist  UrlGetViewController.mm
cmake_lib/lib/: CMakeLists.txt
cmake_lib/lib/include/: lib.h
cmake_lib/lib/src/: lib.cpp
